# Dokkan-bot-cpp

./: CMakeLists.txt  README.md  main.cpp
src/Api/: auth.cpp  auth.hpp  farm.cpp  farm.hpp  user.cpp  user.hpp
src/Cryption/: cryption.cpp  cryption.hpp
src/Database/: database.cpp  database.hpp
src/Database/pysqlsimplecipher/: decryptor.cpp  decryptor.hpp
src/Other/: ClientSend.cpp  ClientSend.hpp  apiPath.hpp  config.hpp  utils.cpp  utils.hpp
